# BlackArch-DesktopLauncher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
assets/: README.md
packaging/: blackarch-launcher.desktop
packaging/arch/: PKGBUILD
qml/: AddToolDialog.qml  BackgroundCarousel.qml  BackgroundManager.qml  CornerSprite.qml  DetailsPane.qml  FallbackBackground.qml  GlassPane.qml  InstallLogDialog.qml  Main.qml  TitleBar.qml  ToolTree.qml
src/: backend.cpp  backend.h  desktopparser.cpp  desktopparser.h  main.cpp  toolmodel.cpp  toolmodel.h
